2001-05-14  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/objc-gnu2next.h: Add error prototypes.
	* Source/objc-gnu2next.m: Include preface.h, define error funcs.

2001-05-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Removed some unused obsolete code.
	* Source/NSProxy.m: Modified ([methodSignatureForSelector:]) and
	([respondsToSelector:]) to work for existing methods and raise
	exception for non-existant methods.  The MacOS-X docs says they raise
	exceptions, but I think it makes sense for them to work for methods
	that are actually implemented in the proxy.

2001-05-11  Adam Fedor  <fedor@gnu.org>

	* Source/NSArchiver.m ([NSArchiver -encodeValueOfObjCType:at:]): Use
	signed char to encode _C_CHR.
	* Source/NSPortCoder.m ([NSPortCoder -decodeValueOfObjCType:at:]): 
	Be lenient about decoding [un]signed chars.
	* Source/NSUnarchiver.m: Likewise.
	* Source/GSTemplateValue.m (-encodeWithCoder:): Use signed char to
	encode/decode type info.
	* Source/GSValue.m: Likewise.
	* Source/NSConcreteNumber.m: Likewise.
	* Source/NSNumber.m: Likewise.
	* Source/NSValue.m: Likewise.

2001-05-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: Use respondsToSelector rather than respondsTo
	* Source/NSRunLoop.m: ditto ... and tidy up categories to avoid
	compiler warnings.
	* Source/NSAutoreleasePool.m: Add ([+freeCache]) method to clear out
	the cache of pools in the current thread.
	* Documentation/gsdoc/NSAutoreleasePool.gsdoc: basic class
	documentation inlcuding normal GNUstep extensions.

2001-05-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Fixes to last modifications - provided by
	Chris B Vetter.
	* Source/NSString.m: Fix memory allocation of a unichar buffer to
	correct size.
	* Source/NSPipe.m: Log an error if we can't open a new pipe.
	* Source/NSTask.m: Slight tidyup

2001-05-04  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSObject.m (GSGetValue): Call handleQueryWithUnboundKey: