@@ -1,3 +1,9 @@
+2001-05-15  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSString.m: ([stringByDeletingPathExtension]) rewrite to
+	conform to MacOS-X documentation.
+	([pathComponents]) ditto.
+
 2001-05-14  Adam Fedor  <fedor@gnu.org>
 
 	* Headers/gnustep/base/objc-gnu2next.h: Add error prototypes.
